Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}

0.114     2016-04-27 04:26:51Z
          - fix PodWeaver config test that broke when Dist::Zilla::Tester
            behaviour changed

0.113     2016-04-23 16:11:17Z
          - remove last vestiges of Path::Class

0.112     2016-03-14 02:35:38Z
          - adjust minting template so vim modeline is always high enough to
            be respected (first five lines)
          - use new version_extractor = Module::Metadata feature in
            [Test::ReportPrereqs]

0.111     2016-02-10 04:50:57Z
          - use more sophisticated markup for the irc channel in SUPPORT pod
          - avoid mangling pod sections labelled something like "SUPPORTED
            INTERFACES" into the "SUPPORT" section

0.110     2015-12-23 07:57:17Z
          - run [Git::Contributors] later, after other prereq plugins have run

0.109     2015-12-02 02:59:09Z
          - avoid importing Test::Deep::none in tests, to avoid clashing with
            List::Util
          - strip ANSI colours when testing release output

0.108     2015-11-12 04:55:28Z
          - drop dots after URLs in CONTRIBUTING, which broke hyperlinking
          - switch from [GenerateFile::ShareDir] to
            [GenerateFile::FromShareDir]

0.107     2015-10-14 01:29:39Z
          - bump prereq version for [PodSyntaxTests], [PodCoverageTests] for
            the new xt/author placement

0.106     2015-10-11 00:00:09Z
          - bump prereq version for [InstallGuide] (RT#107659)
          - bump prereq version for [Test::PodSpelling] (RT#107660)

0.105     2015-09-27 17:23:09Z
          - fix cleanup of old LICENSE file after moving it to LICENCE during
            release (broken in 0.103)
          - fix declared version dependency on [Test::Kwalitee], to ensure it
            has the "filename" configuration option (RT#107362)

0.104     2015-09-19 21:48:10Z
          - add a L<> around the support mailing list address woven into pod