@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - [Test::PodSpelling] now also tests files in examples/, lib/,
+            script/, t/, xt/ directories
 
 0.114     2016-04-27 04:26:51Z
           - fix PodWeaver config test that broke when Dist::Zilla::Tester
